--- a/webappp/css/style.css
+++ b/webappp/css/style.css
@@ -292,7 +292,7 @@ a.navbar-brand {
 }
 
 .activate-menu {
-  background-image: linear-gradient(-140deg, #2c7dbc 15%, #7cccc5 70%);
+  background-image: linear-gradient(-140deg, lightblue 15%, grey 70%);
   -webkit-box-shadow: -3px 13px 24px -1px rgba(0,0,0,0.3);
   box-shadow: -3px 13px 24px -1px rgba(0,0,0,0.3);
 }
@@ -426,7 +426,7 @@ nav:before {
 #showcase {
   height: 98vh;
   background-image: linear-gradient(to right bottom,
-  rgba(50,139,207, 0.8), rgba(161,218,213, 0.8)), url(../img/showcasebg.jpg);
+  rgba(33,139,65, 0.8), rgba(161,3222,213, 0.8)), url(../img/menatechbg.jpg);
   background-size: cover;
   background-position: center;
   margin-top: 5.6ems;
